--- a/components/com_jce/editor/libraries/css/src/override.css
+++ b/components/com_jce/editor/libraries/css/src/override.css
@@ -391,9 +391,6 @@ label {
     top: 0.24em;
     border-radius: 2px;
     margin-right: 3px;
-    /*background-image: -webkit-linear-gradient(-45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
-    background-image: linear-gradient(-45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
-    background-size: 22px 22px;*/
 }
 
 .uk-dropdown {
